// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isFullScreen 1`] = `
<ScaleControl
  isFullScreen={true}
  mbMap={
    Object {
      "getBounds": [Function],
      "getContainer": [Function],
      "getZoom": [Function],
      "off": [Function],
      "on": [Function],
      "unproject": [Function],
    }
  }
>
  <div
    css="unknown styles"
    style={
      Object {
        "width": "62.7474245034397px",
      }
    }
  >
    <Insertion
      cache={
        Object {
          "insert": [Function],
          "inserted": Object {
            "ord6ld-mapScaleControlStyles-mapScaleControlFullScreenStyles": true,
            "q0tqsj-mapScaleControlStyles": true,
          },
          "key": "css",
          "nonce": undefined,
          "registered": Object {},
          "sheet": StyleSheet {
            "_insertTag": [Function],
            "before": null,
            "container": <head>
              <style
                data-emotion="css"
                data-s=""
              >
                
              </style>
            </head>,
            "ctr": 2,
            "insertionPoint": undefined,
            "isSpeedy": true,
            "key": "css",
            "nonce": undefined,
            "prepend": undefined,
            "tags": Array [
              <style
                data-emotion="css"
                data-s=""
              >
                
              </style>,
            ],
          },
        }
      }
      isStringTag={true}
      serialized={
        Object {
          "name": "ord6ld-mapScaleControlStyles-mapScaleControlFullScreenStyles",
          "next": undefined,
          "styles": "position:absolute;z-index:1000;left:12px;bottom:12px;pointer-events:none;color:#1D2A3E;border-left:2px solid #1D2A3E99;border-bottom:2px solid #1D2A3E99;text-align:right;background-color:#F6F9FC;padding-left:4px;padding-right:4px;;label:mapScaleControlStyles;;bottom:calc(24px * 2);;label:mapScaleControlFullScreenStyles;;",
        }
      }
    />
    <div
      className="css-ord6ld-mapScaleControlStyles-mapScaleControlFullScreenStyles"
      style={
        Object {
          "width": "62.7474245034397px",
        }
      }
    >
      ~50 km
    </div>
  </div>
</ScaleControl>
`;

exports[`render 1`] = `
<ScaleControl
  isFullScreen={false}
  mbMap={
    Object {
      "getBounds": [Function],
      "getContainer": [Function],
      "getZoom": [Function],
      "off": [Function],
      "on": [Function],
      "unproject": [Function],
    }
  }
>
  <div
    css="unknown styles"
    style={
      Object {
        "width": "62.7474245034397px",
      }
    }
  >
    <Insertion
      cache={
        Object {
          "insert": [Function],
          "inserted": Object {
            "q0tqsj-mapScaleControlStyles": true,
          },
          "key": "css",
          "nonce": undefined,
          "registered": Object {},
          "sheet": StyleSheet {
            "_insertTag": [Function],
            "before": null,
            "container": <head>
              <style
                data-emotion="css"
                data-s=""
              >
                
              </style>
            </head>,
            "ctr": 1,
            "insertionPoint": undefined,
            "isSpeedy": true,
            "key": "css",
            "nonce": undefined,
            "prepend": undefined,
            "tags": Array [
              <style
                data-emotion="css"
                data-s=""
              >
                
              </style>,
            ],
          },
        }
      }
      isStringTag={true}
      serialized={
        Object {
          "name": "q0tqsj-mapScaleControlStyles",
          "next": undefined,
          "styles": "position:absolute;z-index:1000;left:12px;bottom:12px;pointer-events:none;color:#1D2A3E;border-left:2px solid #1D2A3E99;border-bottom:2px solid #1D2A3E99;text-align:right;background-color:#F6F9FC;padding-left:4px;padding-right:4px;;label:mapScaleControlStyles;;;",
        }
      }
    />
    <div
      className="css-q0tqsj-mapScaleControlStyles"
      style={
        Object {
          "width": "62.7474245034397px",
        }
      }
    >
      ~50 km
    </div>
  </div>
</ScaleControl>
`;
